--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Login</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilosstyle.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
+
 </head>
 <body>
     <main>
