--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Login</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilosstyle.css">
+    <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 
 </head>
@@ -22,8 +22,7 @@
 
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
 
-                <form action="login.php" method="post" autocomplete="on
-                ">
+                <form action="login.php" method="post" autocomplete="on">
 
                     <div class="campo">
                         <i class="material-icons">person</i>                       
@@ -37,7 +36,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
 
                 </form>
 
